--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
+	margin: 0;
 }
-
-@import 'common/greating';
+@import "common/vars";
+@import "common/mixins";
+@import 'common/base';
+@import 'common/layout';
+@import 'common/modules';
