--- a/source/style/common/layout.scss
+++ b/source/style/common/layout.scss
@@ -5,6 +5,7 @@
 	max-width: 100%;
 	background: url('../img/night.jpg') no-repeat center center fixed;
 	background-size: cover;
+	overflow: hidden;
 	&__social {
 		position: absolute;
 		top: 25px;
@@ -29,6 +30,12 @@
 		left: 50%;
 		transform: translateX(-50%);
 	}
+	&__title {
+		display: block;
+		position: relative;
+		width: 100%;
+		padding: 59px 0 0 0;
+	}
 }
 
 .l-wrapper {
@@ -45,7 +52,7 @@
 	flex: 1 1 100%;
 	&_left {
 		position: relative;
-		padding: 0 80px 40px 80px;
+		padding: 40px 80px;
 		background-color: rgb(242, 240, 232);
 		flex: 1 1 50%;
 		@media screen and (max-width: 767px) {
@@ -54,7 +61,7 @@
 	}
 	&_right {
 		position: relative;
-		padding: 0 40px 40px 40px;
+		padding: 40px;
 		background-color: #efebe0;
 		flex: 1 1 50%;
 		@media screen and (max-width: 767px) {
@@ -218,7 +225,7 @@
 
 .l-blog {
 	position: relative;
-	padding-top: 97px;
+	padding: 97px 0;
 	background-color: rgb(250, 248, 240);
 	&::before {
 		content: ' ';
