--- a/source/style/common/modules.scss
+++ b/source/style/common/modules.scss
@@ -38,6 +38,18 @@
 		text-transform: uppercase;
 		max-width: 500px;
 		line-height: 67px;
+		&::before {
+			content: ' ';
+			display: block;
+			position: absolute;
+			top: -27px;
+			left: 50%;
+			transform: translateX(-50%);
+			width: 190px;
+			height: 123px;
+			background: url("../img/stars2.svg") no-repeat center center;
+			opacity: 0.1;
+		}
 	}
 	&_2 {
 		margin: 0 auto 27px auto;
@@ -345,6 +357,35 @@
 	}
 }
 
+.m-contacts-big {
+	&__list {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+	&__item {
+		padding: 15px;
+		vertical-align: middle;
+		@media screen and (min-width: 1200px) {
+			display: inline-block;
+			width: 46%;
+		}
+		@media screen and (max-width: 1199px) {
+			display: block;
+			width: 100%;
+		}
+	}
+	&__icon {
+		width: 40px;
+		height: 40px;
+		margin-right: 10px;
+		vertical-align: middle;
+	}
+	&__title {
+
+	}
+}
+
 .m-nav {
 	margin: 0;
 	padding: 0;
@@ -461,12 +502,22 @@
 
 .m-button {
 	display: inline-block;
+	position: relative;
 	padding: 12px 18px;
 	background-color: rgb(0, 76, 209);
 	color: #fff;
 	font-weight: 500;
 	&:link, &:visited, &:hover, &:active {
 		text-decoration: none;
+	}
+	&_link::before {
+		content: ' ';
+		display: inline-block;
+		position: relative;
+		width: 14px;
+		height: 14px;
+		background: url('../img/link.svg') no-repeat center center;
+		background-size: 14px;
 	}
 }
 
@@ -476,6 +527,17 @@
 	background: url('../img/night2.jpg') no-repeat center center;
 	background-size: cover;
 	position: relative;
+	@media screen and (min-width: 1200px) {
+		margin-bottom: -197px;
+	}
+	@media screen and (max-width: 1199px) {
+		margin-bottom: -283px;
+		padding-bottom: 344px;
+	}
+	@media screen and (max-width: 767px) {
+		margin-bottom: -462px;
+		padding-bottom: 520px;
+	}
 	&__info {
 		margin: 0 auto;
 		max-width: 380px;
@@ -512,10 +574,10 @@
 		margin: 0px auto 16px auto;
 		border-radius: 50%;
 		background-size: cover;
-		&:nth-child(2n+1) {
+		&_1 {
 			background-image: url(../img/user-dmitrii.jpg);
 		}
-		&:nth-child(2n) {
+		&_2 {
 			background-image: url(../img/user-zar.jpg);
 		}
 	}
@@ -533,6 +595,9 @@
 			background: url('../img/quote.svg') no-repeat;
 			background-size: 74px;
 			opacity: 0.1;
+		}
+		@media screen and (max-width: 767px) {
+			text-align: center;
 		}
 	}
 	&__author-name {
@@ -829,6 +894,20 @@
 			&:hover {
 				background-color: rgba(#000, 0.7);
 				padding: 10px 0 0 0;
+			}
+			&-left::before {
+				 content: ' ';
+				 display: block;
+				 width: 100%;
+				 height: 100%;
+				 background: url('../img/slider_arrow_down.svg') no-repeat center center;
+			 }
+			&-right::before {
+				content: ' ';
+				display: block;
+				width: 100%;
+				height: 100%;
+				background: url('../img/slider_arrow_up.svg') no-repeat center center;
 			}
 		}
 	}
