--- a/source/template/works.jade
+++ b/source/template/works.jade
@@ -7,6 +7,8 @@ html
 	<![endif]-->
 	include common/_menu
 	include common/_header
+	.l-header__title
+		h1.m-title.m-title_1 Мои работы
 	.l-wrapper.l-wrapper_flex
 		section.l-section
 			.m-slider
@@ -15,25 +17,25 @@ html
 					.m-project
 						h2.m-title.m-title_2 Интернет-радио
 						span.m-project__description HTML5, CSS3, jQuery, three.js
-						a(href="http://viberoom.audio").m-button
+						a(href="http://viberoom.audio").m-button.m-button_link
 							span.fa.fa-link
 							|  Посмотреть сайт
 				section.m-slider__controls
 					.m-slider__controls_left
-						button.m-slider__controls_button DOWN
+						button.m-slider__controls_button.m-slider__controls_button-left
 					.m-slider__controls_right
-						button.m-slider__controls_button UP
+						button.m-slider__controls_button.m-slider__controls_button-right
 		section.l-section
 			.m-recalls
 				h1.m-title.m-title_1.m-title_light Что обо мне говорят
 				ul.m-comment__list
 					li.m-comment__item
-						.m-comment__userpic
+						.m-comment__userpic.m-comment__userpic_1
 						.m-comment__comment Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
 						.m-comment__author-name Ковальчук Дмитрий
 						.m-comment__author-description основатель Loftschool
 					li.m-comment__item
-						.m-comment__userpic
+						.m-comment__userpic.m-comment__userpic_2
 						.m-comment__comment Этот код выдержет любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
 						.m-comment__author-name Зар Захаров
 						.m-comment__author-description главный преподаватель
