--- a/source/template/common/_head.jade
+++ b/source/template/common/_head.jade
@@ -7,6 +7,7 @@ head
 	meta(content='width=device-width, initial-scale=1' name='viewport')
 	meta(content='ie=edge' http-equiv='x-ua-compatible')
 	//- favicon block start
+	link(rel="shortcut icon" type="image/png" href="assets/img/favicon.png")
 	//- favicon block end
 	link(rel='stylesheet' href='/assets/css/foundation.css')
 	link(rel='stylesheet' href='/assets/css/app.css')
