--- a/source/template/about.jade
+++ b/source/template/about.jade
@@ -15,7 +15,7 @@ html
 			p.m-paragraph Я веб-разработчик из Санкт-Петербурга. Мне 21 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
 			p.m-paragraph Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
 		section.l-section.l-section_right
-			h2.m-title.m-title_2 Чем я могу быть вам полезен
+			h2.m-title.m-title_2 Чем я могу быть <br> вам полезен
 			p.m-paragraph Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.
 			include common/_skills
 		section.l-section
