--- a/source/template/common/_header_special.jade
+++ b/source/template/common/_header_special.jade
@@ -7,5 +7,5 @@ header.l-header
 	.l-header__user-info
 		.m-user-info
 			.m-user-info__userpic
-			.m-title.m-title_1.m-title_light.m-title_special Блог
+			.m-user-info__title Блог
 			.m-user-info__description Статьи, которые я написал
