--- a/source/style/common/base.scss
+++ b/source/style/common/base.scss
@@ -1,10 +1,53 @@
+/* ======== FONTS ========= */
+/* Roboto */
 @font-face {
-	font-family: 'FontAwesome';
-	src: url('../fonts/FontAwesome/FontAwesome.ttf');
+	font-family: 'Roboto';
+	src: url('../fonts/Roboto/roboto-light.woff2') format('woff2'), url('../fonts/Roboto/roboto-light.woff') format('woff'), url('../fonts/Roboto/roboto-light.ttf') format('truetype');
+	font-weight: 300;
+	font-style: normal;
 }
+
 @font-face {
-	font-family: 'Sansus';
-	src: url('../fonts/Webissimo/Sansus-Webissimo-Regular.ttf');
+	font-family: 'Roboto';
+	src: url('../fonts/Roboto/roboto-regular.woff2') format('woff2'), url('../fonts/Roboto/roboto-regular.woff') format('woff'), url('../fonts/Roboto/roboto-regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/Roboto/roboto-medium.woff2') format('woff2'), url('../fonts/Roboto/roboto-medium.woff') format('woff'), url('../fonts/Roboto/roboto-medium.ttf') format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/Roboto/roboto-italic.woff2') format('woff2'), url('../fonts/Roboto/roboto-italic.woff') format('woff'), url('../fonts/Roboto/roboto-italic.ttf') format('truetype');
+	font-weight: 400;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/Roboto/roboto-bold.woff2') format('woff2'), url('../fonts/Roboto/roboto-bold.woff') format('woff'), url('../fonts/Roboto/roboto-bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/Roboto/roboto-bolditalic.woff2') format('woff2'), url('../fonts/Roboto/roboto-bolditalic.woff') format('woff'), url('../fonts/Roboto/roboto-bolditalic.ttf') format('truetype');
+	font-weight: 700;
+	font-style: italic;
+}
+
+/* Sansus Webissimo Regular */
+@font-face {
+	font-family: 'SansusWebissimo';
+	src: url('../fonts/SansusWebissimo/sansus-webissimo-regular.ttf')  format('truetype'), url('../fonts/SansusWebissimo/sansus-webissimo-regular.woff') format('woff'), url('../fonts/SansusWebissimo/sansus-webissimo-regular.woff2') format('woff2');
+	font-weight: 400;
+	font-style: normal;
 }
 
 * {
@@ -23,37 +66,20 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: "Roboto";
+	font-family: 'Roboto', sans-serif;
+	font-weight: 400;
 	font-size: 16px;
+	line-height: 1.5;
 }
 
-.page-welcome {
-	background: url("../img/night.jpg") no-repeat center center fixed;
-	background-size: cover;
-}
-
-.icon {
-	font-family: 'FontAwesome';
-	font-style: normal;
-	&_user {
-		&::before {
-			content: '\f007';
-		}
-	}
-	&_pass {
-		&::before {
-			content: '\f084';
-		}
-	}
-	&_hamburger {
-		&::before {
-			content: '\f0c9';
-		}
-	}
-	&_close {
-		&::before {
-			content: '\f00d';
-		}
+.l-wrapper {
+	&_welcome {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		min-height: 620px;
+		background: url("../img/night.jpg") no-repeat center center fixed;
+		background-size: cover;
 	}
 }
 
