--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -49,4 +49,5 @@ html
 							a(href="#").m-tabs__link Войти
 
 		footer.l-footer.l-footer_special
-			span.footer__content © Константин Житков | создано с любовью в LoftSchool | 2016
+			span.l-footer__content © Константин Житков
+			span.l-footer__content создано с любовью в LoftSchool | 2016
