--- a/source/style/common/layout.scss
+++ b/source/style/common/layout.scss
@@ -107,19 +107,53 @@
 	}
 	&_special {
 		position: absolute;
-		bottom: 40px;
 		left: 50%;
 		transform: translateX(-50%);
 		font-weight: 300;
 		text-align: center;
+		@include desktop {
+			bottom: 4rem;
+			font-size: 1.6rem;
+		}
+		@include tablet {
+			bottom: 4rem;
+			font-size: 1.6rem;
+		}
+		@include phone {
+			bottom: 0.8rem;
+			font-size: 1.4rem;
+		}
+	}
+	&__content {
+		@include desktop {
+			display: inline-block;
+			&:not(:last-child)::after {
+				content: '\00A0|\00A0';
+			}
+		}
+		@include tablet {
+			display: inline-block;
+			&:not(:last-child)::after {
+				content: '\00A0|\00A0';
+			}
+		}
+		@include phone {
+			display: block;
+		}
 	}
 }
 
 .l-card {
+	display: block;
+	width: 100%;
+	height: 100%;
+	position: relative;
 	transition: 0.6s;
 	transform-style: preserve-3d;
-	position: relative;
 	&-container {
+		display: block;
+		width: 100%;
+		height: 100%;
 		perspective: 1000px;
 		&.js-flip .l-card {
 			transform: rotateY(180deg);
@@ -129,98 +163,69 @@
 }
 
 .l-front {
-	width: 380px;
-	padding-top: 35px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: rotateY(0deg) translate(-50%, 20%); /* for FF 31 */
+	transform: rotateY(0deg) translate(-50%, -50%); /* for FF 31 */
 	background-color: rgba(28, 31, 41, 0.5);
 	color: #ffffff;
 	backface-visibility: hidden;
 	z-index: 2;
 	&__user-info {
-		margin-bottom: 20px;
+		margin-bottom: 1rem;
 	}
 	&__social {
-		margin-bottom: 35px;
 		text-align: center;
 		color: rgba(0, 76, 209, 0.7);
+		@include desktop {
+			margin-bottom: 2.7rem;
+		}
+		@include tablet {
+			margin-bottom: 2.7rem;
+		}
+		@include phone {
+			margin-bottom: 3rem;
+		}
 	}
 }
 
 .l-back {
-	width: 380px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: rotateY(180deg) translate(50%, 20%);
+	transform: rotateY(180deg) translate(50%, -50%);
 	background-color: rgba(28, 31, 41, 0.5);
 	text-align: center;
 	color: #ffffff;
 	backface-visibility: hidden;
+	@include desktop {
+		width: 38rem;
+	}
+	@include tablet {
+		width: 34.8rem;
+	}
+	@include phone {
+		width: 30rem;
+	}
 	&__title {
 		display: block;
 		text-align: center;
-		margin: 35px 0 40px;
 		font-family: 'SansusWebissimo', sans-serif;
-		font-size: 35px;
-		line-height: 1.171428;
 		text-transform: uppercase;
-	}
-	&__input-username {
-		display: block;
-		width: 340px;
-		margin: 0px auto 20px auto;
-		padding: 14px 20px 14px 65px;
-	}
-	&__input-password {
-		display: block;
-		width: 340px;
-		margin: 0px auto 20px auto;
-		padding: 14px 20px 14px 65px;
-	}
-	&__btn_checkbox {
-		margin-right: 20px;
-		&::before {
-			content: ' ';
-			display: block;
-			background-color: rgb(5, 72, 190);
-			width: 20px;
-			height: 20px;
-			border-radius: 2px;
+		@include desktop {
+			margin: 3.6rem 0;
+			font-size: 3.5rem;
+			line-height: 1.17143;
 		}
-		&:checked {
-			background-color: rgb(255, 255, 255);
+		@include tablet {
+			margin: 3rem 0;
+			font-size: 3rem;
+			line-height: 1.4;
 		}
-	}
-	&__nav {
-		width: 100%;
-		margin: 0;
-		padding: 0;
-		list-style: none;
-		display: table;
-		table-layout: fixed;
-		&-item {
-			position: relative;
-			display: table-cell;
-			line-height: 45px;
-			text-align: center;
-			background-color: rgba(0, 76, 209, 0.85);
-			&:hover {
-				background-color: rgba(4, 62, 163, 0.85);
-			}
-			&:not(:last-child) {
-				border-right: 2px solid rgba(255, 255, 255, 0.5);
-			}
-		}
-		&-link {
-			display: block;
-			&:link, &:visited, &:hover, &:active {
-				color: #fff;
-				font-weight: 400;
-				text-decoration: none;
-			}
+		@include phone {
+			margin: 2.7rem 0 3.1rem 0;
+			font-size: 3rem;
+			line-height: 1.4;
 		}
 	}
 }
